# connections

./: Dockerfile  README.md  api.py  groups.json  index.html  package-lock.json  package.json  pyproject.toml  vercel.json
client/: api.tsx  index.css  index.html  types.tsx
client/components/: App.tsx  Board.tsx  Tile.tsx
scripts/: word_retrieval.py
server/: Dockerfile  api.py  groups.json
server/scripts/: word_retrieval.py
src/: App.tsx  Board.tsx  Tile.tsx  api.tsx  groups.py  index.css  main.tsx  server.py  types.tsx  word_retrieval.py
src/components/: App.tsx  Board.tsx
src/connections/: __init__.py
